--- a/src/App.css
+++ b/src/App.css
@@ -61,30 +61,33 @@ nav div {
 }
 
 /* From uiverse.io */
-.personal button {
-  padding: 1.3em 3em;
-  font-size: 12px;
+.personal a {
+  color: black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
+  height: 30px;
+  width: 150px;
+  border-radius: 45px;
   text-transform: uppercase;
   letter-spacing: 2.5px;
-  font-weight: 500;
-  color: #000;
   background-color: #fff;
   border: none;
-  border-radius: 45px;
   box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
   transition: all 0.3s ease 0s;
   cursor: pointer;
   outline: none;
 }
 
-.personal button:hover {
+.personal a:hover {
   background-color: #239cc4;
   box-shadow: 0px 15px 20px rgba(46, 138, 229, 0.4);
   color: #fff;
   transform: translateY(-7px);
 }
 
-.personal button:active {
+.personal a:active {
   transform: translateY(-1px);
 }
 
