--- a/src/App.css
+++ b/src/App.css
@@ -49,6 +49,8 @@ nav div {
   display: flex;
   justify-content: center;
   background-color: #222425;
+  /* background-image: url('./imgs/bg.png');
+  background-size: 100% 600px; */
   height: 600px;
   align-items: center;
   font-family: 'Courier New', Courier, monospace;
@@ -157,9 +159,16 @@ nav div {
   height: 600px;
   display: flex;
   justify-content: space-around;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  color: whitesmoke;
+  color: antiquewhite;
   align-items: center;
+}
+
+ h1 {
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 2em;
+} 
+#sobreMim p {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 #sobreMim article {
@@ -213,11 +222,11 @@ nav div {
   display: flex;
   flex-direction: row;
   width: 100%;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-family: 'Courier New', Courier, monospace;
   text-align: center;
   justify-content: center;
   flex-direction: column;
-  color: whitesmoke;
+  color: antiquewhite;
 }
 
 #projetos img {
@@ -236,6 +245,10 @@ nav div {
 
 /* CONTACT */
 
+.contact h1 {
+  font-family: 'Courier New', Courier, monospace;
+}
+
 .contact {
   background-color: #353B3C;
   height: 700px;
@@ -249,7 +262,7 @@ nav div {
   text-align: center;
   justify-content: center;
   flex-direction: column;
-  color: whitesmoke;
+  color: antiquewhite;
 }
 
 .contactLinks {
@@ -355,7 +368,7 @@ footer {
   bottom: 0;
   position: static;
   font-family: 'Courier New', Courier, monospace;
-  color: whitesmoke;
+  color: antiquewhite;
   justify-content: space-evenly;
   align-items: center;
   flex-direction: column;
