--- a/src/App.css
+++ b/src/App.css
@@ -60,6 +60,7 @@ nav div {
 
 .personal img {
   border-radius: 50%;
+  width: 15%;
 }
 
 /* From uiverse.io */
@@ -218,7 +219,7 @@ nav div {
 /* PROJECT */
 #projetos {
   background-color: #353B3C;
-  height: 500px;
+  height: 100%;
   display: flex;
   flex-direction: row;
   width: 100%;
@@ -226,6 +227,7 @@ nav div {
   text-align: center;
   flex-direction: column;
   color: antiquewhite;
+  padding-bottom: 50px;
 }
 
 #projetos img {
