--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@ html {
 /* CABEÇALHO */
 nav {
   background-color: #222425;
+  color: #2d2b36;
   display: flex;
   justify-content: space-around;
   position: fixed;
@@ -18,13 +19,14 @@ nav {
 }
 
 nav a {
-  color: antiquewhite;
+  color: #e2dbff;
   text-decoration: none;
   transition-duration: 0.2s;
 }
 
 nav a:hover {
-  color: white;
+  color: #fcfbff;
+  ;
   font-size: 110%;
   text-decoration: none;
 }
@@ -65,7 +67,7 @@ nav div {
 
 /* From uiverse.io */
 .personal a {
-  color: black;
+  color: #302e3a;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -115,6 +117,7 @@ nav div {
 
 .line-1 {
   top: 50%;
+  color: #29272e;
   margin: 0 auto;
   border-right: 2px solid rgba(255, 255, 255, .75);
   margin: 0 auto;
@@ -161,15 +164,15 @@ nav div {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  color: antiquewhite;
+  color: #e2dbff;
   align-items: center;
 }
 
 .sobre{
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: space-around;
-  color: antiquewhite;
+  color: #fbfaff;
   align-items: center;
   gap: 2rem;
 }
@@ -189,7 +192,7 @@ flex-direction: column;
 }
 
 #sobreMim img {
-  width: 250px;
+  width: 25%;
   border-radius: 50%;
 }
 
@@ -207,6 +210,7 @@ flex-direction: column;
   border-radius: 45px;
   text-transform: uppercase;
   letter-spacing: 2.5px;
+  color: #3a344b;
   background-color: #fff;
   border: none;
   box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
@@ -218,7 +222,7 @@ flex-direction: column;
 .spans span:hover {
   background-color: #239cc4;
   box-shadow: 0px 15px 20px rgba(46, 138, 229, 0.4);
-  color: #fff;
+  color: #e2dbff;
   transform: translateY(-7px);
 }
 
@@ -241,7 +245,7 @@ flex-direction: column;
   font-family: 'Courier New', Courier, monospace;
   text-align: center;
   flex-direction: column;
-  color: antiquewhite;
+  color: #e2dbff;
   padding-bottom: 50px;
 }
 
@@ -278,7 +282,7 @@ flex-direction: column;
   text-align: center;
   justify-content: center;
   flex-direction: column;
-  color: antiquewhite;
+  color: #e2dbff;
 }
 
 .contactLinks {
@@ -287,7 +291,6 @@ flex-direction: column;
 }
 
 .contactLinks a {
-  color: black;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -298,6 +301,7 @@ flex-direction: column;
   text-transform: uppercase;
   letter-spacing: 2.5px;
   background-color: #fff;
+  color: #3a344b;
   border: none;
   box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
   transition: all 0.3s ease 0s;
@@ -308,7 +312,7 @@ flex-direction: column;
 .contactLinks a:hover {
   background-color: #239cc4;
   box-shadow: 0px 15px 20px rgba(46, 138, 229, 0.4);
-  color: #fff;
+  color: #e2dbff;
   transform: translateY(-7px);
 }
 
@@ -378,13 +382,13 @@ form button:hover {
 
 footer {
   background-color: #222425;
-  height: 100px;
   width: 100%;
+  height: 50px;
   display: flex;
   bottom: 0;
   position: static;
   font-family: 'Courier New', Courier, monospace;
-  color: antiquewhite;
+  color: #e2dbff;
   justify-content: space-evenly;
   align-items: center;
   flex-direction: column;
