--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,5 +1,5 @@
-* { 
-    margin: 0; 
+* {
+    margin: 0;
     padding: 0;
     box-sizing: border-box;
     -webkit-font-smoothing: antialiased;
@@ -12,6 +12,7 @@ main {
     position: relative;
     display: flex;
     flex-direction: column;
+    background-color: #0a0613;
 }
 
 a {
