--- a/src/styles/transitions.css
+++ b/src/styles/transitions.css
@@ -1,12 +1,6 @@
 .transition-enter {
-    backdrop-filter: blur(5rem);
-    /* width: 100vh; */
+    backdrop-filter: blur(100vh);
     opacity: 0;
     position: absolute;
     z-index: 500;
-}
-
-.transition-enter.transition-enter-active {
-    opacity: 1;
-    transition: opacity 500ms ease-in-out;
 }
