--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,6 +5,8 @@
     -webkit-font-smoothing: antialiased;
     font-family: 'Montserrat', sans-serif;
     transition: .5s;
+    /* color: #fff; */
+
 }
 
 main {
